--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
                       <span style="color:purple;">Principal Component Regression in Econometrics</span>
                       <span style="color:#000;">joint with <a href="https://www.reddy.e.u-tokyo.ac.jp/member/tachibana.html#" target="_blank">Chisato Tachibana</a></span>
                 </li>
-                <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
+                <!-- <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li> -->
             </ul>
        </div>
 
