Update sections for awards and publications

--- a/research.html
+++ b/research.html
@@ -21,12 +21,21 @@
 
       <div class="container">
         <nav class="tabs">
+          <a class="btn" href="#awards">Award</a>
+          <a class="btn" href="#publications">Publication</a>
           <a class="btn" href="#work-in-progress">Work in Progress</a>
-          <a class="btn" href="#publications">Publications</a>
-          <a class="btn" href="#awards">Awards</a>
+          <a class="btn" href="#presentations">Presentation</a>
         </nav>
       </div>
 
+       <div class="container">
+            <h2 id="awards">Award</h2>
+       </div>
+    
+       <div class="container">
+            <h2 id="publications">Publication</h2>
+       </div>
+    
        <div class="container">
           <h2 id="work-in-progress">Work in Progress</h2>
             <ul>
@@ -38,12 +47,12 @@
             </ul>
        </div>
 
-       <div class="container">
-            <h2 id="publications">Publications</h2>
-       </div>
 
        <div class="container">
-            <h2 id="awards">Awards</h2>
+            <h2 id="presentations">Presentation</h2>
+            <ul>
+                <li> Dec., 2025: The 39th <a href="https://sites.google.com/site/kansaimacro/" target="_blank">Economics Workshop for Young Economists</a> in Kyoto </li>
+            </ul>           
        </div>
 
     <footer>
