--- a/research.html
+++ b/research.html
@@ -51,8 +51,8 @@
        <div class="container">
             <h2 id="presentations">Presentation</h2>
             <ul>
-                <li> Jan. 2026: The 33rd <a href="https://sites.google.com/view/keiryo-keizai-kenkyu/" target="_blank">Kansai Econometrics Meeting</a> in Miyazaki </li>
-                <li> Dec. 2025: The 39th <a href="https://sites.google.com/site/kansaimacro/" target="_blank">Economics Workshop for Young Economists</a> in Kyoto </li>
+                <li> Jan. 2026: The 33rd <a href="https://sites.google.com/view/keiryo-keizai-kenkyu/" target="_blank">Kansai Econometrics Meeting</a> in Miyazaki, Japan </li>
+                <li> Dec. 2025: The 39th <a href="https://sites.google.com/site/kansaimacro/" target="_blank">Economics Workshop for Young Economists</a> in Kyoto, Japan </li>
             </ul>           
        </div>
 
