--- a/research.html
+++ b/research.html
@@ -40,8 +40,11 @@
           <h2 id="work-in-progress">Work in Progress</h2>
             <ul>
                 <li> 
-                      <span style="color:purple;">Principal Component Regression in Econometrics</span>
+                      <span style="color:purple;">Principal Component Regression in Econometrics: A Selective Inference Perspective</span>
                       <span style="color:#000;">joint with <a href="https://www.reddy.e.u-tokyo.ac.jp/member/tachibana.html#" target="_blank">Chisato Tachibana</a></span>
+                </li>
+                <li> 
+                    <p style="color: purple;">Estimating the true number of principal components under the random design</p> [<a href="" target="_blank">arXiv</a>] 
                 </li>
                 <!-- <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li> -->
             </ul>
