--- a/research.html
+++ b/research.html
@@ -44,7 +44,8 @@
                       <span style="color:#000;">joint with <a href="https://www.reddy.e.u-tokyo.ac.jp/member/tachibana.html#" target="_blank">Chisato Tachibana</a></span>
                 </li>
                 <li> 
-                    <p style="color: purple;">Estimating the true number of principal components under the random design</p> [<a href="" target="_blank">arXiv</a>] 
+                     <span style="color:purple;">Estimating the true number of principal components under the random design</span>
+                     <span style="color:#000;"> [<a href="" target="_blank">arXiv</a>]  </span>
                 </li>
                 <!-- <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li> -->
             </ul>
