--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
                 </li>
                 <li> 
                      <span style="color:purple;">Estimating the true number of principal components under the random design</span>
-                     <span style="color:#000;"> [<a href="" target="_blank">arXiv</a>]  </span>
+                     <span style="color:#000;"> [<a href="https://arxiv.org/abs/2511.10419" target="_blank">arXiv</a>]  </span>
                 </li>
                 <!-- <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li> -->
             </ul>
