Update project title in research.html

--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
           <h2 id="work-in-progress">Work in Progress</h2>
             <ul>
                 <li> 
-                      <span style="color:purple;">Principal component regression in econometrics: a selective inference perspective</span>
+                      <span style="color:purple;">Principal component analysis in econometrics: a selective inference perspective</span>
                       <span style="color:#000;">joint with <a href="https://www.reddy.e.u-tokyo.ac.jp/member/tachibana.html#" target="_blank">Chisato Tachibana</a></span>
                 </li>
                 <!-- <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li> -->
