Add upcoming presentation to research.html

--- a/research.html
+++ b/research.html
@@ -51,6 +51,7 @@
        <div class="container">
             <h2 id="presentations">Presentation</h2>
             <ul>
+                <li> Mar. 2026: <a href="https://www.kier.kyoto-u.ac.jp/en/workshop_category/econometrics/" target="_blank">KIER Econometrics Seminar</a> in Miyazaki, Japan </li>
                 <li> Jan. 2026: The 33rd <a href="https://sites.google.com/view/keiryo-keizai-kenkyu/" target="_blank">Kansai Econometrics Meeting</a> in Miyazaki, Japan </li>
                 <li> Dec. 2025: The 39th <a href="https://sites.google.com/site/kansaimacro/" target="_blank">Economics Workshop for Young Economists</a> in Kyoto, Japan </li>
             </ul>           
