Fix HTML encoding issues in japanese.html

--- a/japanese.html
+++ b/japanese.html
@@ -101,7 +101,7 @@
             <ul>
                 <li><a href="https://www.1oaktokyo.com/" target="_blank">1OAK TOKYO</a> </li>
                 <li><a href="https://www.ghostosaka.com/" target="_blank">GHOST OSAKA</a> </li>
-                <li><a href="https://www.mixcloud.com/lymatokyoradio/" target="_blank">LYMA TOKYO Radio</a> Powered by <a href="https://lymatokyo.com/" target="_blank">LYMA TOKYO</a></li>
+                <li><a href="https://www.mixcloud.com/lymatokyoradio/" target="_blank">LYMA TOKYO Radio</a> Powered by <a href="https://www.instagram.com/lymatokyo/" target="_blank">LYMA TOKYO</a></li>
                 <li><a href="https://open.spotify.com/playlist/4Tv6YXcq1hIa2DT79xtl44?si=IX51Z94eTeSUbQXxFVX8vw&pi=NrELdxUHTQ2b8&nd=1&dlsi=2e2f91e24bb44a8a" target="_blank">One More Drink x Recommended 100%</a> Curated by <a href="https://www.instagram.com/iamdjmartin_/" target="_blank">DJ MARTIN</a></li>
                 <li><a href="https://open.spotify.com/playlist/7ni1syllXVGeA3M954DQ5F?si=JaE9vpVgSuCo_CB7aaGhMw&pi=SOabog6aTY6bk&nd=1&dlsi=d99514a2611c404e" target="_blank">HIPHOP 2025</a> Curated by <a href="https://osaka.gala-resort.jp/regular/gala-thursday/" target="_blank">Attraction Crew</a></li>                
                 <li><a href="https://www.power106.com/" target="_blank">Power 106</a> (Radio Station in LA)</li>
@@ -119,6 +119,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
