Revise research interests in japanese.html
Updated the research section to reflect current interests.

--- a/japanese.html
+++ b/japanese.html
@@ -39,7 +39,7 @@
      <section id="research">
         <div class="container">
             <h2>研究</h2>
-            <p> 最近は，モデル選択によって生じる種々の問題を克服する方法を考察しています．
+            <p> パネルデータ，政策学習等の分野に興味があります．
             </p>
             <p> くわしくは，<a href="index.html">ホーム</a>や<a href="research.html">研究</a>をご覧ください．</p>
             <p> ゼミや授業で使用した発表資料は，<a href="material.html">資料</a>からご覧いただけます． </p>
@@ -95,7 +95,7 @@
                 <li><a href="https://a10club.jp/" target="_blank">A10</a> in Ebisu, Tokyo</li>
                 <li><a href="https://wam-inc.jp/howl/" target="_blank">HOWL</a> in Shibuya, Tokyo</li>
                 <li><a href="https://www.goldbaratedition.com/" target="_blank">Gold Bar at EDITION</a> in Toranomon, Tokyo</li>
-                <li><a href="https://www.instagram.com/yasu0704_foodie/" target="_blank">more info</a></li>
+                <li><a href="https://www.instagram.com/yasu0704_healthy/" target="_blank">more info</a></li>
             </ul>
             <p><b>Music</b></p>
             <ul>
@@ -119,6 +119,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
