--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="research">
         <div class="container">
             <h2>Research Interests</h2>
-            <p>I am currently working on the following topics: Post-Selection Inference, Treatment Effect Heterogeneity, Policy Learning. 
+            <p>I am currently interested in Panel Data Analysis with Nonclassical Fixed Effect; Treatment Effect Heterogeneity; Policy Learning. 
             </p>
         </div>
     </section>
@@ -73,6 +73,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
