Fix HTML formatting and remove commented section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     <section id="education">
         <div class="container">
             <h2>Education</h2>
-            <p><b>M.A. in Economics (2026, Expected)</b>, Graduate School of Economics, Kyoto University (Advisors: <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p>
+            <!-- <p><b>Ph.D in Economics (2029, Expected)</b>, Graduate School of Economics, Kyoto University (Advisors: <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p> -->
+            <p><b>M.A. in Economics (2026, Expected)</b>, Graduate School of Economics, Kyoto University. </p>
             <p><b>B.A. in Economics (2024)</b>, School of Political Science and Economics, Waseda University (Supervisor: <a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a>).</p>
         </div>
     </section>
@@ -73,6 +74,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
