--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, 
                 <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a>.
             </p>
-            <p> CV on this page <a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">this page</a>
+            <p> CV: Click <a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">here</a>.
             </p>
             <p> Under the guidance of 
                 <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
@@ -76,6 +76,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
