--- a/japanese.html
+++ b/japanese.html
@@ -24,6 +24,8 @@
             <h2>プロフィール</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
             <p>氏名：松村 泰行（まつむら やすゆき） </p>
+            <p>履歴書：<a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">こちら</a>をご覧ください．
+            </p>
             <p>所属：<a href="https://www.kyoto-u.ac.jp/ja" target="_blank">京都大学</a> <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">大学院経済学研究科</a> 修士2年
             </p>
             <p>研究領域：計量経済学，数理統計学</p>
@@ -51,7 +53,8 @@
     <section id="education">
         <div class="container">
             <h2>学歴</h2>
-            <p><b>修士（経済学，2026 (見込み)）</b> 京都大学 大学院経済学研究科（指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，<a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生） </p>
+            <p><b>博士（経済学，2029 (見込み)）</b> 京都大学 大学院経済学研究科（指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，<a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生） </p>
+            <p><b>修士（経済学，2026 (見込み)）</b> 京都大学 大学院経済学研究科 </p>
             <p><b>学士（経済学，2024）</b> 早稲田大学 政治経済学部（指導教員：<a href="https://w-rdb.waseda.jp/html/100000609_ja.html" target="_blank">田中久稔</a>先生）</p>
         </div>
     </section>
@@ -119,6 +122,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
