Fix HTML formatting and clean up code

--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
         <div class="container">
             <h2>About Me</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
-            <p>I am <b>Yasuyuki Matsumura</b>, a second-year master's student in 
-                <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, 
-                <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a>.
-            </p>
-            <p> Curriculum Vitae: Click <a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">here</a>.
+            <p>I am <b>Yasuyuki Matsumura</b>, a second-year master's student in Graduate School of Economics, Kyoto University.[<a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">Curriculum Vitae</a>]
             </p>
             <p> Under the guidance of 
                 <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
@@ -76,6 +72,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
