--- a/research.html
+++ b/research.html
@@ -41,9 +41,9 @@
             <ul>
                 <li> 
                       <span style="color:purple;">Principal component analysis in econometrics: a selective inference perspective</span>
-                      <span style="color:#000;">joint with <a href="https://www.reddy.e.u-tokyo.ac.jp/member/tachibana.html#" target="_blank">Chisato Tachibana</a> [<a href="https://arxiv.org/abs/2511.10419v2" target="_blank">arXiv</a>]</span>
+                      <span style="color:#000;">joint with <a href="https://www.reddy.e.u-tokyo.ac.jp/member/tachibana.html#" target="_blank">Chisato Tachibana</a> [<a href="https://arxiv.org/abs/2511.10419v2" target="_blank">arXiv</a>] [<a href="Slides/arXiv-2511.10419-1shot-summary.pdf" target="_blank">Summary</a>]</span>
                 </li>
-                <!-- <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li> -->
+                <!-- <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li> --> 
             </ul>
        </div>
 
