--- a/material.html
+++ b/material.html
@@ -23,12 +23,21 @@
 
       <div class="container">
             <nav class="tabs">
-              <a class="btn" href="#econome2025">Econometrics 1 & 2 (2025, Kyoto U)</a>
-              <a class="btn" href="#econome2024">Econometrics 1 & 2 (2024, Kyoto U)</a>
-              <a class="btn" href="#review">Article Review</a>
-              <a class="btn" href="#rabc2024">RA Bootcamp (2024)</a>
+              [<a class="btn" href="#BeamerTem">Beamer Template</a>]
+              [<a class="btn" href="#econome2025">Econometrics 1 & 2 (2025, Kyoto U)</a>]
+              [<a class="btn" href="#econome2024">Econometrics 1 & 2 (2024, Kyoto U)</a>]
+              [<a class="btn" href="#review">Article Review</a>]
+              [<a class="btn" href="#rabc2024">RA Bootcamp (2024)</a>]
             </nav>
       </div>
+
+
+       <div class="container">
+            <h2 id="BeamerTem"> Beamer Template </h2>
+                <ul>
+                    <li> Visit <a href="https://github.com/yasu0704xx/BeamerTemplate/" target="_blank">here</a>.</li>
+                </ul>
+       </div>
       
        <div class="container">
             <h2 id="econome2025"> Econometrics 1 & 2 (2025, Kyoto U) </h2>
