--- a/japanese.html
+++ b/japanese.html
@@ -24,9 +24,9 @@
             <h2>プロフィール</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
             <p>氏名：松村 泰行（まつむら やすゆき） </p>
-            <p>履歴書：<a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">こちら</a>をご覧ください．
+            <p>履歴書：<a href="CV_YASUYUKI_MATSUMURA_JPN.pdf" target="_blank">こちら</a>をご覧ください．
             </p>
-            <p>所属：<a href="https://www.kyoto-u.ac.jp/ja" target="_blank">京都大学</a> <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">大学院経済学研究科</a> 修士2年
+            <p>所属：京都大学 大学院経済学研究科 修士2年
             </p>
             <p>研究領域：計量経済学，数理統計学</p>
             <p>指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，
@@ -122,6 +122,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
