Update header text for slides template

--- a/material.html
+++ b/material.html
@@ -33,7 +33,7 @@
 
 
        <div class="container">
-            <h2 id="BeamerTem"> Slides Template (Beamer and Rmd) </h2>
+            <h2 id="BeamerTem"> Template: Beamer and Rmd Slides </h2>
                 <ul>
                     <li> Visit <a href="https://github.com/yasu0704xx/BeamerTemplate/" target="_blank">here</a>.</li>
                 </ul>
