Change navigation links to use brackets

--- a/research.html
+++ b/research.html
@@ -12,10 +12,10 @@
             Yasuyuki Matsumura <span> Graduate School of Economics, Kyoto University </span>
         </div>
         <nav class="nav">
-            <a href="index.html">Home</a>
-            <a href="research.html">Research</a>
-            <a href="material.html">Material</a>
-            <a href="japanese.html">Japanese</a>
+            [<a href="index.html">Home</a>]
+            [<a href="research.html">Research</a>]
+            [<a href="material.html">Material</a>]
+            [<a href="japanese.html">Japanese</a>]
         </nav>
     </header>
 
