Refactor navigation links in research.html

--- a/research.html
+++ b/research.html
@@ -12,19 +12,19 @@
             Yasuyuki Matsumura <span> Graduate School of Economics, Kyoto University </span>
         </div>
         <nav class="nav">
-            [<a href="index.html">Home</a>]
-            [<a href="research.html">Research</a>]
-            [<a href="material.html">Material</a>]
-            [<a href="japanese.html">Japanese</a>]
+            <a href="index.html">Home</a>
+            <a href="research.html">Research</a>
+            <a href="material.html">Material</a>
+            <a href="japanese.html">Japanese</a>
         </nav>
     </header>
 
       <div class="container">
         <nav class="tabs">
-          <a class="btn" href="#awards">Award</a>
-          <a class="btn" href="#publications">Publication</a>
-          <a class="btn" href="#work-in-progress">Work in Progress</a>
-          <a class="btn" href="#presentations">Presentation</a>
+          [<a class="btn" href="#awards">Award</a>]
+          [<a class="btn" href="#publications">Publication</a>]
+          [<a class="btn" href="#work-in-progress">Work in Progress</a>]
+          [<a class="btn" href="#presentations">Presentation</a>]
         </nav>
       </div>
 
