Fix HTML formatting and update profile photo
Updated the 'About Me' section with a new photo and corrected some formatting issues.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <img src="me-2.jpg" alt="My Photo" class="profile-photo">
+            <img src="me-2.png" alt="My Photo" class="profile-photo">
             <p>I am <b>Yasuyuki Matsumura</b>, a second-year master's student in Graduate School of Economics, Kyoto University. [<a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">Curriculum Vitae</a>]
             </p>
             <p> Under the guidance of 
@@ -72,6 +72,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
