Update profile photo and content in japanese.html
Updated profile photo and made minor adjustments.

--- a/japanese.html
+++ b/japanese.html
@@ -22,7 +22,7 @@
     <section id="about">
         <div class="container">
             <h2>プロフィール</h2>
-            <img src="me.jpg" alt="My Photo" class="profile-photo">
+            <img src="me-2.png" alt="My Photo" class="profile-photo">
             <p>氏名：松村 泰行（まつむら やすゆき） </p>
             <p>履歴書：<a href="CV_YASUYUKI_MATSUMURA_JPN.pdf" target="_blank">こちら</a>をご覧ください．
             </p>
@@ -122,6 +122,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
