--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <h2>About Me</h2>
             <img src="me-2.png" alt="My Photo" class="profile-photo">
-            <p>I am <b>Yasuyuki Matsumura</b>, a 1st-year Ph.D student in Graduate School of Economics, Kyoto University. [<a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">Curriculum Vitae</a>] 
+            <p>I am <b>Yasuyuki Matsumura</b>, a 1st-year Ph.D student at Graduate School of Economics, Kyoto University. [<a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">Curriculum Vitae</a>] 
             </p>
             <p> Under the guidance of 
                 Prof.<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
@@ -51,9 +51,9 @@
     <section id="education">
         <div class="container">
             <h2>Education</h2>
-            <p><b>Ph.D in Economics (2029, Expected)</b>, Kyoto University (Academic Supervisors: <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p> 
+            <p><b>Ph.D in Economics (2029, Expected)</b>, Kyoto University (Academic Supervisors: Prof.<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and Dr.<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p> 
             <p><b>M.A. in Economics (2026, Expected)</b>, Kyoto University. </p>
-            <p><b>B.A. in Economics (2024)</b>, School of Political Science and Economics, Waseda University (Supervisor: <a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a>).</p>
+            <p><b>B.A. in Economics (2024)</b>, School of Political Science and Economics, Waseda University (Academic Supervisor: Dr.<a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a>).</p>
         </div>
     </section>
 
@@ -61,7 +61,7 @@
         <div class="container">
             <h2>Experience</h2>
             <ul>
-                <li>Sept. 2025 - Present: Research Assistant at Institute of Economic Research, Kyoto University (PI: Dr.<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a>) </li>
+                <li> Research Assistant (Sept. 2025 - Present) at Institute of Economic Research, Kyoto University (PI: Dr.<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a>) </li>
             </ul>
         </div>
     </section>
@@ -74,6 +74,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
