Fix formatting and structure in index.html

--- a/index.html
+++ b/index.html
@@ -50,19 +50,20 @@
     
     <section id="education">
         <div class="container">
-            <h2>Education</h2>
-            <p><b>Ph.D in Economics (2029, Expected)</b>, Kyoto University (Academic Supervisors: Prof.<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and Dr.<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p> 
-            <p><b>M.A. in Economics (2026, Expected)</b>, Kyoto University. </p>
+        <h2>Education</h2>
+            <p><b>Ph.D in Economics (2029, Expected)</b>, Graduate School of Economics, Kyoto University.</p> 
+                <p>Academic Supervisors: Prof.<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and Dr.<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a></p> 
+            <p><b>M.A. in Economics (2026, Expected)</b>, Graduate School of Economics, Kyoto University.</p>
             <p><b>B.A. in Economics (2024)</b>, School of Political Science and Economics, Waseda University (Academic Supervisor: Dr.<a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a>).</p>
+                <p>Academic Supervisor: Dr.<a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a></p>
         </div>
     </section>
 
     <section id="experience">
         <div class="container">
-            <h2>Experience</h2>
-            <ul>
-                <li> Research Assistant (Sept. 2025 - Present) at Institute of Economic Research, Kyoto University (PI: Dr.<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a>) </li>
-            </ul>
+        <h2>Experience</h2>
+            <p><b>Research Assistant (Sept. 2025 - Present)</b>, Institute of Economic Research, Kyoto University.</p> 
+                <p>PI: Dr.<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a></p>
         </div>
     </section>
 
@@ -74,6 +75,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
