Fix HTML formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <section id="education">
         <div class="container">
         <h2>Education</h2>
-            <p><b>Ph.D in Economics (2029, Expected)</b>, Graduate School of Economics, Kyoto University.
+            <p><b>Ph.D in Economics (2029, Expected)</b>, Graduate School of Economics, Kyoto University
                 <br>Academic Supervisors: Prof.<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and Dr.<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a></p> 
-            <p><b>M.A. in Economics (2026, Expected)</b>, Graduate School of Economics, Kyoto University.</p>
-            <p><b>B.A. in Economics (2024)</b>, School of Political Science and Economics, Waseda University.</p>
-                <p>Academic Supervisor: Dr.<a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a></p>
+            <p><b>M.A. in Economics (2026, Expected)</b>, Graduate School of Economics, Kyoto University</p>
+            <p><b>B.A. in Economics (2024)</b>, School of Political Science and Economics, Waseda University
+                <br>Academic Supervisor: Dr.<a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a></p>
         </div>
     </section>
 
@@ -63,7 +63,7 @@
         <div class="container">
         <h2>Experience</h2>
             <p><b>Research Assistant (Sept. 2025 - Present)</b>, Institute of Economic Research, Kyoto University.
-                <br>PI: Dr.<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a> </p> 
+                <br>PI: Dr.&thinsp;<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a> </p> 
         </div>
     </section>
 
@@ -75,6 +75,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
