Fix HTML formatting and update content structure

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <p>I am <b>Yasuyuki Matsumura</b>, a 1st-year Ph.D student at Graduate School of Economics, Kyoto University. [<a href="CV_YASUYUKI_MATSUMURA.pdf" target="_blank">Curriculum Vitae</a>] 
             </p>
             <p> Under the guidance of 
-                Prof.<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
-                Dr.<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>,
+                Prof.&thinsp;<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
+                Dr.&thinsp;<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>,
                 my research focuses on Econometric Theory and Statistics.
             </p>
             <p>Contact: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
@@ -40,9 +40,10 @@
     <section id="research">
         <div class="container">
             <h2>Research Interests</h2>
-            <p>Panel Data Analysis with Nonclassical Fixed Effect 
-            </p>
-            <p>Treatment Effect Heterogeneity, Policy Learning. 
+            <p>
+               Panel Data Analysis with Nonclassical Fixed Effect 
+                <br>Treatment Effect Heterogeneity
+                <br>Policy Learning
             </p>            
         </div>
     </section>
@@ -52,17 +53,17 @@
         <div class="container">
         <h2>Education</h2>
             <p><b>Ph.D in Economics (2029, Expected)</b>, Graduate School of Economics, Kyoto University
-                <br>Academic Supervisors: Prof.<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and Dr.<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a></p> 
+                <br>Academic Supervisors: Prof.&thinsp;<a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and Dr.&thinsp;<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a></p> 
             <p><b>M.A. in Economics (2026, Expected)</b>, Graduate School of Economics, Kyoto University</p>
             <p><b>B.A. in Economics (2024)</b>, School of Political Science and Economics, Waseda University
-                <br>Academic Supervisor: Dr.<a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a></p>
+                <br>Academic Supervisor: Dr.&thinsp;<a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a></p>
         </div>
     </section>
 
     <section id="experience">
         <div class="container">
         <h2>Experience</h2>
-            <p><b>Research Assistant (Sept. 2025 - Present)</b>, Institute of Economic Research, Kyoto University.
+            <p><b>Research Assistant (Sept. 2025 - Present)</b>, Institute of Economic Research, Kyoto University
                 <br>PI: Dr.&thinsp;<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a> </p> 
         </div>
     </section>
@@ -75,6 +76,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
