Revise research interests and formatting in index.html
Updated research interests to include 'Policy Learning' and adjusted formatting.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <h2>Research Interests</h2>
             <p>
                Panel Data Analysis with Nonclassical Fixed Effect 
-                <br>Treatment Effect Heterogeneity
-                <br>Policy Learning
+                <br>Policy Learning, Treatment Effect Heterogeneity
             </p>            
         </div>
     </section>
@@ -76,6 +75,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
