--- a/japanese.html
+++ b/japanese.html
@@ -26,7 +26,7 @@
             <p>氏名：松村 泰行（まつむら やすゆき） </p>
             <p>履歴書：<a href="CV_YASUYUKI_MATSUMURA_JPN.pdf" target="_blank">こちら</a>をご覧ください．
             </p>
-            <p>所属：京都大学 大学院経済学研究科 修士2年
+            <p>所属：京都大学 大学院経済学研究科 博士後期課程1年
             </p>
             <p>研究領域：計量経済学，数理統計学</p>
             <p>指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，
@@ -41,10 +41,9 @@
      <section id="research">
         <div class="container">
             <h2>研究</h2>
-            <p> パネルデータ，政策学習等の分野に興味があります．
-            </p>
-            <p> くわしくは，<a href="index.html">ホーム</a>や<a href="research.html">研究</a>をご覧ください．</p>
-            <p> ゼミや授業で使用した発表資料は，<a href="material.html">資料</a>からご覧いただけます． </p>
+            <p> パネルデータ分析，政策学習，処置効果の異質性等の分野に興味があります．
+            <br> くわしくは，<a href="index.html">ホーム</a>や<a href="research.html">研究</a>をご覧ください．
+            <br> ゼミや授業で使用した発表資料は，<a href="material.html">資料</a>からご覧いただけます． </p>
         </div>
     </section>
 
@@ -53,9 +52,9 @@
     <section id="education">
         <div class="container">
             <h2>学歴</h2>
-            <p><b>博士（経済学，2029 (見込み)）</b> 京都大学 大学院経済学研究科（指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，<a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生） </p>
-            <p><b>修士（経済学，2026 (見込み)）</b> 京都大学 大学院経済学研究科 </p>
-            <p><b>学士（経済学，2024）</b> 早稲田大学 政治経済学部（指導教員：<a href="https://w-rdb.waseda.jp/html/100000609_ja.html" target="_blank">田中久稔</a>先生）</p>
+            <p><b>博士（経済学，2029 (見込み)）</b> 京都大学大学院経済学研究科（指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，<a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生） </p>
+            <p><b>修士（経済学，2026 (見込み)）</b> 京都大学大学院経済学研究科 </p>
+            <p><b>学士（経済学，2024）</b> 早稲田大学政治経済学部経済学科（指導教員：<a href="https://w-rdb.waseda.jp/html/100000609_ja.html" target="_blank">田中久稔</a>先生）</p>
         </div>
     </section>
 
@@ -122,6 +121,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
