Update japanese.html with work experience section
Added a new section for work experience and updated the profile section with the current position as a research assistant.

--- a/japanese.html
+++ b/japanese.html
@@ -24,10 +24,7 @@
             <h2>プロフィール</h2>
             <img src="me-2.png" alt="My Photo" class="profile-photo">
             <p>氏名：松村 泰行（まつむら やすゆき） </p>
-            <p>履歴書：<a href="CV_YASUYUKI_MATSUMURA_JPN.pdf" target="_blank">こちら</a>をご覧ください．
-            </p>
-            <p>所属：京都大学 大学院経済学研究科 博士後期課程1年
-            </p>
+            <p>所属：京都大学 大学院経済学研究科 博士後期課程1年 [<a href="CV_YASUYUKI_MATSUMURA_JPN.pdf" target="_blank">履歴書</a>] </p>
             <p>研究領域：計量経済学，数理統計学</p>
             <p>指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，
                         <a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生
@@ -58,7 +55,13 @@
         </div>
     </section>
 
-
+    <section id="experience">
+        <div class="container">
+        <h2>職歴</h2>
+            <p><b>リサーチ・アシスタント (2025年9月 - 現在)</b>，京都大学経済研究所
+                <br>PI: &thinsp;<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">髙橋秀典</a>先生 </p> 
+        </div>
+    </section>
     
     <section id="Link">
         <div class="container">
@@ -121,6 +124,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
