--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <section id="experience">
         <div class="container">
         <h2>Experience</h2>
-            <p><b>Research Assistant (Sept. 2025 - Present)</b>, Institute of Economic Research, Kyoto University
-                <br>PI: Dr.&thinsp;<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a> </p> 
+            <p><b>Institute of Economic Research, Kyoto University (KIER) (Sept. 2025 - Present)</b>
+                <br>Research Assistant for Dr.&thinsp;<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a> </p> 
         </div>
     </section>
 
@@ -75,6 +75,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
