Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="experience">
         <div class="container">
         <h2>Experience</h2>
-            <p><b>Institute of Economic Research, Kyoto University (KIER) (Sept. 2025 - Present)</b>
+            <p><b>Institute of Economic Research, Kyoto University (Sept. 2025 - Present)</b>
                 <br>Research Assistant for Dr.&thinsp;<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a> </p> 
         </div>
     </section>
@@ -75,6 +75,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
