--- a/japanese.html
+++ b/japanese.html
@@ -58,8 +58,8 @@
     <section id="experience">
         <div class="container">
         <h2>職歴</h2>
-            <p><b>リサーチ・アシスタント (2025年9月 - 現在)</b>，京都大学経済研究所
-                <br>PI: &thinsp;<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">髙橋秀典</a>先生 </p> 
+            <p><b>京都大学経済研究所 (2025年9月 - 現在)</b>
+                <br>リサーチ・アシスタント（PI: &thinsp;<a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">髙橋秀典</a>先生） </p> 
         </div>
     </section>
     
@@ -124,6 +124,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
